[project]
name = "crew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.140.0",
    "crewai-tools>=0.49.0",
    "requests>=2.32.4",
    "streamlit>=1.46.1",
    "apify-client>=1.8.0",
    "linkedin-api>=2.3.1",
    "fastapi>=0.115.14",
    "uvicorn>=0.35.0",
]
